--- a/index.html
+++ b/index.html
@@ -5,18 +5,103 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Penguin</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+<style>
+    .font-bebas{
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    }
+</style>
 </head>
 <body>
-    <header>
-        <div>
-            <div>
-                <h1 class="text-7xl">Be the Penguins
+    <header class="bg-[#FFFBF0] px-4 py-4 md:px-32 py-20">
+        <nav>
+
+        </nav>
+        <div class="flex flex-col md:flex-row justify-between items-center">
+            <div class="space-y-3">
+                <h1 class="text-7xl uppercase font-bebas"> <span class="text-[#FABE4C]">Be the Penguins</span><br>
                     of Winter</h1>
+                    <p>Lorem Ipsum is simply dummy text of the printing 
+                        and typesetting industry.</p>
+                    <button class="py-4 px-9 bg-blue-500 uppercase rounded-xl text-white font-medium bg-gradient-to-r from-cyan-500 to-blue-500 ...">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" 
+                        viewBox="0 0 24 24" stroke-width="1.5" 
+                        stroke="currentColor" class="w-6 h-6 inline">
+                            <path stroke-linecap="round" stroke-linejoin=
+                            "round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                          </svg>
+                           Buy Now</button>
+            </div>
+            <div>
+                <img src="images/model.png" alt="">
             </div>
         </div>
     </header>
-    <main>
-
+    <main class="max-w-7xl mx-auto">
+        <section class="py-12">
+            <h3 class="text-5xl font-bebas">Women Jackets</h3>
+             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-7 font-serif">
+                <div class="space-y-3 drop-shadow-lg">
+                    <div class="bg-[#F1F1F1] p-5 rounded-2xl">
+                        <img src="images/jacket-1.png" alt="">
+                    </div>
+                    <h4 class="text-2xl font-bold text-orange-400">Yellow Coat Jacket </h4>
+                    <p>Lorem Ipsum is simply dummy text of the 
+                        printing and typesetting industry.</p>
+                    <div class="flex justify-between">
+                        <h3 class="text-4xl font-black">$234</h3>
+                        <button class="py-4 px-9 bg-blue-500 uppercase rounded-xl text-white font-medium bg-gradient-to-r from-cyan-500 to-blue-500 ...">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" 
+                        viewBox="0 0 24 24" stroke-width="1.5" 
+                        stroke="currentColor" class="w-6 h-6 inline">
+                            <path stroke-linecap="round" stroke-linejoin=
+                            "round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                          </svg>
+                           Buy Now</button>
+                    </div>
+                </div>
+                <div class="space-y-3 drop-shadow-lg">
+                    <div class="bg-[#F1F1F1] p-5 rounded-2xl">
+                        <img src="images/jacket-2.png" alt="">
+                    </div>
+                    <h4 class="text-2xl font-bold text-orange-400">Yellow Coat Jacket </h4>
+                    <p>Lorem Ipsum is simply dummy text of the 
+                        printing and typesetting industry.</p>
+                    <div class="flex justify-between">
+                        <h3 class="text-4xl font-black">$234</h3>
+                        <button class="py-4 px-9 bg-blue-500 uppercase rounded-xl text-white font-medium bg-gradient-to-r from-cyan-500 to-blue-500 ...">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" 
+                        viewBox="0 0 24 24" stroke-width="1.5" 
+                        stroke="currentColor" class="w-6 h-6 inline">
+                            <path stroke-linecap="round" stroke-linejoin=
+                            "round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                          </svg>
+                           Buy Now</button>
+                    </div>
+                </div>
+                <div class="space-y-3 drop-shadow-lg">
+                    <div class="bg-[#F1F1F1] p-5 rounded-2xl">
+                        <img src="images/jacket-3.png" alt="">
+                    </div>
+                    <h4 class="text-2xl font-bold text-orange-400">Yellow Coat Jacket </h4>
+                    <p>Lorem Ipsum is simply dummy text of the 
+                        printing and typesetting industry.</p>
+                    <div class="flex justify-between">
+                        <h3 class="text-4xl font-black">$234</h3>
+                        <button class="py-4 px-9 bg-blue-500 uppercase rounded-xl text-white font-medium bg-gradient-to-r from-cyan-500 to-blue-500 ...">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" 
+                        viewBox="0 0 24 24" stroke-width="1.5" 
+                        stroke="currentColor" class="w-6 h-6 inline">
+                            <path stroke-linecap="round" stroke-linejoin=
+                            "round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                          </svg>
+                           Buy Now</button>
+                    </div>
+                </div>
+             </div>
+        </section>
     </main>
     <footer>
 
